define OpenApiRouterSpec
